# Harmony

./: .gitignore  Cargo.toml  Dockerfile  README.md
.github/workflows/: rust.yaml
app/: Cargo.toml
app/src/: args.rs  bridge.rs  config.rs  enrich.rs  events.rs  fetch.rs  fetched_data.rs  harmony.rs  lib.rs  logger.rs  main.rs  profiles.rs  router.rs  run.rs  user_profile.rs
app/src/profile/: build.rs  enrich.rs  mod.rs
app/tests/: relay.rs
core/: Cargo.toml
core/src/: adapter.rs  attachment.rs  channel.rs  error.rs  event.rs  lib.rs  message.rs  message_sender.rs  peers.rs  platform.rs  run.rs  user.rs
core/src/capabilities/: list_channels.rs  list_users.rs  mod.rs  send_message.rs
core/src/channels/: core_channel.rs  mod.rs  platform_channel.rs
core/src/messages/: core_message.rs  mod.rs  platform_message.rs
core/src/users/: core_user.rs  mod.rs  platform_user.rs
discord/: Cargo.toml
discord/src/: adapter.rs  compat.rs  convert.rs  fetch.rs  handler.rs  lib.rs  proxy.rs  sender.rs
docs/: CONTRIBUTING.md  WRITING_AN_ADAPTER.md
irc/: Cargo.toml
irc/src/: adapter.rs  compat.rs  convert.rs  fetch.rs  lib.rs  lister.rs  sender.rs
runtime/: config.toml  fetched_data.toml
testing/: Cargo.toml
testing/src/: context.rs  fake_platform.rs  lib.rs  macros.rs  world.rs
utils/: Cargo.toml
utils/src/: bimap.rs  lib.rs  peer_groups.rs
