[workspace]
members = ["core", "utils", "discord", "irc", "app", "testing"]
resolver = "2"

[workspace.package]
edition = "2024"
license = "AGPL-3.0"

[workspace.lints.clippy]
pedantic = { level = "deny", priority = -1 }
all = { level = "deny", priority = -1 }
nursery = { level = "warn", priority = -1 }
cargo = { level = "warn", priority = -1 }
cargo_common_metadata = "allow"
missing_errors_doc = "warn"
