[workspace]
members = ["core", "discord", "irc", "app", "testing"]
resolver = "2"

[workspace.package]
edition = "2024"
license = "AGPL-3.0"

[workspace.lints.clippy]
all = { level = "deny", priority = -1 }
cargo = { level = "warn", priority = -1 }
cargo_common_metadata = "allow"
missing_errors_doc = "warn"
multiple_crate_versions = "allow"
nursery = { level = "warn", priority = -1 }
pedantic = { level = "deny", priority = -1 }

[workspace.dependencies]
# Workspace dependencies
discord-adapter = { path = "./discord" }
harmony-core = { path = "./core" }
harmony-testing = { path = "./testing" }
irc-adapter = { path = "./irc" }

# External dependencies
anyhow = "1"
async-trait = "0.1"
clap = "4.5.60"
env_logger = "0.11"
exn = "0.3"
futures = "0.3"
http = "1"
irc = "1"
log = "0.4"
serde = "1"
serenity = "0.12"
tokio = "1"
toml = "0.8"
