[package]
name = "harmony"
version = "0.1.0"

edition.workspace = true
license.workspace = true

[[bin]]
name = "harmony"
path = "src/harmony.rs"

[dependencies]
discord-adapter.workspace = true
harmony-core.workspace = true
irc-adapter.workspace = true

anyhow.workspace = true
clap = { workspace = true, features = ["derive"] }
env_logger.workspace = true
log.workspace = true
serde = { workspace = true, features = ["derive"] }
tokio = { workspace = true, features = ["rt", "rt-multi-thread", "macros", "sync", "signal"] }
toml.workspace = true

[dev-dependencies]
harmony-testing.workspace = true

tokio = { workspace = true, features = ["test-util", "macros"] }

[lints]
workspace = true
