[package]
name = "bridge"
version = "0.1.0"

edition.workspace = true
license.workspace = true

[lib]
name = "bridge"
path = "src/lib.rs"

[[bin]]
name = "bridge"
path = "src/bin/bridge.rs"

[[bin]]
name = "bridge-fetch"
path = "src/bin/fetch.rs"

[dependencies]
bridge-core.workspace = true
bridge-discord.workspace = true
bridge-irc.workspace = true
bridge-utils.workspace = true

anyhow.workspace = true
clap = { workspace = true, features = ["derive"] }
env_logger.workspace = true
log.workspace = true
serde = { workspace = true, features = ["derive"] }
tokio = { workspace = true, features = ["rt", "rt-multi-thread", "macros", "sync", "signal"] }
toml.workspace = true

[dev-dependencies]
bridge-testing.workspace = true

tokio = { workspace = true, features = ["test-util", "macros"] }

[lints]
workspace = true
