[package]
name = "harmony"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[[bin]]
name = "harmony"
path = "src/harmony.rs"

[dependencies]
harmony-core = { path = "../core" }
bridge-irc = { path = "../irc" }
bridge-discord = { path = "../discord" }
tokio = { version = "1", features = ["rt", "rt-multi-thread", "macros", "sync", "signal"] }
serde = { version = "1", features = ["derive"] }
toml = "0.8"
log = "0.4"
env_logger = "0.11"
anyhow = "1"
clap = { version = "4.5.60", features = ["derive"] }

[dev-dependencies]
harmony-testing = { path = "../testing" }
tokio = { version = "1", features = ["test-util", "macros"] }

[lints]
workspace = true
