[package]
name = "discord-adapter"
version = "0.1.0"

edition.workspace = true
license.workspace = true

[dependencies]
harmony-core.workspace = true

async-trait.workspace = true
exn.workspace = true
log.workspace = true
serenity.workspace = true
tokio = { workspace = true, features = ["rt", "rt-multi-thread", "macros", "sync"] }

[lints]
workspace = true
