[package]
name = "bridge-discord"
version = "0.1.0"

edition.workspace = true
license.workspace = true

[dependencies]
bridge-core.workspace = true

anyhow.workspace = true
async-trait.workspace = true
log.workspace = true
serenity.workspace = true
tokio = { workspace = true, features = ["rt", "rt-multi-thread", "macros", "sync"] }

[lints]
workspace = true
