[package]
name = "discord-adapter"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[dependencies]
harmony-core = { path = "../core" }
log = "0.4"
serenity = { version = "0.12", default-features = true }
tokio = { version = "1", features = ["rt", "rt-multi-thread", "macros", "sync"] }
exn.workspace = true
async-trait = "0.1"

[lints]
workspace = true
