[package]
name = "irc-adapter"
version = "0.1.0"

edition.workspace = true
license.workspace = true

[dependencies]
harmony-core.workspace = true

exn.workspace = true
futures.workspace = true
irc.workspace = true
log.workspace = true
tokio = { workspace = true, features = ["rt", "rt-multi-thread", "macros", "sync", "time"] }

[lints]
workspace = true
