[package]
name = "bridge-irc"
version = "0.1.0"

edition.workspace = true
license.workspace = true

[dependencies]
bridge-core.workspace = true

anyhow.workspace = true
futures.workspace = true
irc.workspace = true
log.workspace = true
tokio = { workspace = true, features = ["rt", "rt-multi-thread", "macros", "sync", "time"] }

[lints]
workspace = true
