[package]
name = "irc-adapter"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[dependencies]
harmony-core = { path = "../core" }
log = "0.4"
irc = "1"
futures = "0.3"
tokio = { version = "1", features = ["rt", "rt-multi-thread", "macros", "sync", "time"] }

[lints]
workspace = true
