[package]
name = "bridge-testing"
version = "0.1.0"

edition.workspace = true
license.workspace = true

[dependencies]
bridge.workspace = true
bridge-core.workspace = true

tokio = { workspace = true, features = ["sync", "rt", "time"] }

# Testing does not require the same level of clippy warnings
[lints.clippy]
all = "warn"
