[package]
name = "harmony-testing"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[dependencies]
harmony-core = { path = "../core" }
tokio = { version = "1", features = ["sync", "rt", "time"] }

# Testing does not require the same level of clippy warnings
[lints.clippy]
all = "warn"

